Close #450. Fix alignment, show images on stages

--- a/app/assets/stylesheets/styles/components/crops/ui/buttons/_add_to_garden_button.css.scss
+++ b/app/assets/stylesheets/styles/components/crops/ui/buttons/_add_to_garden_button.css.scss
@@ -1,6 +1,9 @@
-.add-to-garden {
+.add-to-garden-button {
   margin: 1em;
   bottom: 0;
   position: absolute;
   right: 0;
+  .add-to-garden-button-guide {
+    position: relative;
+  }
 }
